# SYOP

./: .gitignore  README.md
P1/: main.ps1
P1/dane_testowe/: 7_cm_blade.stl  Holder.stl  PTS - lab5 - analiza głoski.vi  ZAŁ_1_P07_Karta_pracy_dyplomowej_inżynierskiej.docx  blade_v2.stl  foremka.gx  poziom_krzywej_grzewczej_m3.txt  pyproject.toml  todo  zaliczenie_wykladu.lsc  zmianatempm2(1).txt  zmianatempm3(1).txt
P1/dane_testowe/folder1/: 57_2022_Załącznik-5.docx  Algorytm MRP.ods  Baza danych firm WIP.xlsx  Harmonogram-ćwiczeń-laboratoryjnych.docx
P1/dane_testowe/folder2/: Sprawozdanie.docx  Sprawozdanie_2022.docx  foremka.stl  handle_v2_1.stl  spis-kabli-i-skretek-stan-na-dzien-31.03.xls
P1/dane_testowe/folder2/folder3/: net.vi  zmianatempm2.txt
P2/: lorem_ipsum.docx  main.ps1  test.docx  test2.docx  test_krotki.docx
P3/: main.ps1  recipes_short.json
