[tool.poetry]
name = "logicblocks-hvac"
version = "0.1.0"
description = ""
authors = ["Zofia Kubrak <zofiakubrak@gmail.com>"]
readme = "README.md"
packages = [{include = "logicblocks_hvac"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
black = "^22.10.0"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 100

[tool.pylint]
max-line-length = 100
disable = """import-error, missing-module-docstring, no-name-in-module,  missing-function-docstring, missing-class-docstring"""
